syntax = "proto3";

package app.gen_code.api;
option go_package = "github.com/thesisK19/buildify/app/gen_code/api";

import "google/api/annotations.proto";
import "app/gen_code/api/data.proto";

service GenCodeService {
    rpc GenReactSourceCode(GenReactSourceCodeRequest)
        returns (GenReactSourceCodeResponse) {
        option (google.api.http) = {
            post : "/api/gen-react-code"
            body : "*"
        };
    }
    rpc HelloWorld(EmptyRequest) returns (HelloWorldResponse) {
        option (google.api.http) = {
            get : "/api/hello-world"
        };
    }
    rpc HealthCheck(EmptyRequest) returns (EmptyResponse) {
        option (google.api.http) = {
            get : "/"
        };
    }
}

message EmptyRequest {}
message EmptyResponse {}

message GenReactSourceCodeRequest {
    repeated Node nodes = 1;
    repeated Page pages = 2;
    repeated Component components = 3;
    string theme = 4;
    string project_id = 5;
}

message GenReactSourceCodeResponse { string url = 1; }

message HelloWorldResponse { string message = 1; }
